--- a/views/adminPlantCollection.ejs
+++ b/views/adminPlantCollection.ejs
@@ -120,11 +120,16 @@
             <label for="plantImage">Upload Plant Image:</label>
             <input type="file" class="form-control-file" id="plantImage" name="plantImage" accept="image/*" required>
         </div>
+
+        <div class="form-group">
+            <label for="transplantSeedling">Transplant Seedling(Optional)</label>
+            <input type="number" name="transplantSeedling" class="form-control" id="transplantShow">
+        </div>
         <button type="submit" class="btn btn-primary">Add Plant</button>
     </form>
-    
     
   
 </div>
 
 <%- include("partials/AdminFooter.ejs") %>
+
