--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -68,8 +68,8 @@ color: black;
 }
 .weather-icon-lg{
     width: 100%; 
-    max-width: 150px;
-    min-width: 130px;
+    max-width: 180px;
+    min-width: 150px;
 }
 
 .bg-white-70{
@@ -301,6 +301,24 @@ a{
   overflow: auto;
   
 }
+
+.table img {
+    border-radius: 5px;
+}
+
+.table th, .table td {
+    vertical-align: middle;
+}
+
+.table th {
+    background-color: #FFFFFF;
+    color: #757575;
+}
+
+.badge {
+    font-size: 0.85rem;
+}
+
 /* SIDEBAR - BREADCRUMBS*/
 .bread-crumbs{
     font-size: clamp(16px, 2vw, 25px);
