--- a/views/editPlant.ejs
+++ b/views/editPlant.ejs
@@ -47,8 +47,17 @@
             <p>Current Image:</p>
             <img src="<%= plant.image %>" alt="<%= plant.name %>" width="150">
         </div>
+        <div class="form-group my-3">
+            <label for="transplantSeedling">Transplant Seedling(Optional)</label>
+            <input type="number" name="transplantSeedling" class="form-control" id="transplantShow" 
+                   value="<%= plant.transplantSeedling || '' %>"
+                   placeholder="Days"
+                   required>
+        </div>
+        
         <button type="submit" class="btn btn-primary">Update Plant</button>
     </form>
 </div>
 
 <%- include("partials/AdminFooter.ejs") %>
+
