--- a/views/partials/UserFooter.ejs
+++ b/views/partials/UserFooter.ejs
@@ -1,11 +1,23 @@
 
     
-    
-     <div id="spinner" class="spinner-container" style="display: none">
-      <div class="spinner">
-          <img src="/images/spinner.svg" alt="" width="100px" />
+<!--     
+    <div id="spinner" class="spinner-container"
+    style="display: none; position: fixed;
+    top: 0;            
+    left: 0;          
+    width: 100%;       
+    height: 100%;       
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;      
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;">
+
+    <div class="spinner">
+          <img src="/images/spinner.svg" alt="" width="100px"/>
       </div>
-  </div>
+    </div> -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
@@ -13,13 +25,7 @@
    <script>
 $(document).ready(function() {
 
-    // PLANTS TABLE
-    $('#plantsTable').DataTable({
-      "paging": true,   
-      "searching": true,   
-      "lengthChange": true
-    });
-  
+
 
     // Get the current path
     var currentPath = window.location.pathname;
@@ -51,12 +57,6 @@ $(document).ready(function() {
         pageTitle.text('POSTS');
     }
 
-    // Spinner functionality
-    $("#spinner").show(); // Show spinner when the page loads
-    $(window).on("load", function() {
-        $("#spinner").hide(); // Hide spinner when page finishes loading
-    });
-
     // Menu toggle and X-bar transformation
     $("#menu-toggle").on("click", function(e) {
         e.preventDefault();
@@ -66,9 +66,7 @@ $(document).ready(function() {
     });
 });
 
-
-
-   </script>
-</body>
+    </script>
+    </body>
 </html>
     
