--- a/views/login.ejs
+++ b/views/login.ejs
@@ -68,7 +68,7 @@
                          </div>
                          <div class="d-flex flex-column mt-3">
                               <div class="d-flex justify-content-end">
-                                   <a href="#" class="lighter-text"><small>Forgot Password?</small></a>
+                                   <a href="/forgot-password" class="lighter-text"><small>Forgot Password?</small></a>
                               </div>
                               <button type="submit" class="btn my-button mt-3">Login</button>
                               <p class="text-center mt-3">Don't have an account?<a class="fs-13" href="/register" class="no-account-text"> Sign up</a></p>
